default/objects/Solicitation__c/Solicitation__c.object-meta.xml
<CustomObject>
    <description>WI0008192: Migration from the Object Services.</description>
    <label>Solicitation</label>
    <nameField>
        <displayFormat>SO - {00000}</displayFormat>
        <label>Solicitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>