default/objects/Solicitation__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Solicitations</relationshipLabel>
    <relationshipName>Solicitations</relationshipName>
    <type>Lookup</type>
</CustomField>