default/objects/Solicitation__c/fields/LastIntegration__c.field-meta.xml
<CustomField>
    <fullName>LastIntegration__c</fullName>
    <label>Last Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>