default/objects/Solicitation__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Handler</fullName>
            </value>
            <value>
                <fullName>Repairer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>