default/objects/Solicitation__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Adjuster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>