default/objects/Solicitation__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SE01</fullName>
                <label>Solicitud de servicio de peritacion</label>
            </value>
            <value>
                <fullName>SE02</fullName>
                <label>Solicitud de autorización de perito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>